kubernetes/storage/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluentsearch-storage
  namespace: fluentsearch-storage
  labels:
    app: fluentsearch-storage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fluentsearch-storage
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: fluentsearch-storage
    spec:
      nodeSelector:
        doks.digitalocean.com/node-pool: general-pool
      containers:
        - name: fluentsearch-storage
          image: yee2542/fluentsearch-storage:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
