kubernetes/storage/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fluentsearch-storage-ingress
  namespace: fluentsearch-storage
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "storage.fluentsearch.ml"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fluentsearch-storage-service
                port:
                  number: 3000
